feat(app): notification about new version

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -92,7 +92,8 @@
     "WHATS_NEW": "What's new",
     "FEEDBACK": "Feedback",
     "CAR": "Car",
-    "CATEGORY": "Category"
+    "CATEGORY": "Category",
+    "UPDATE": "Update available"
   },
   "DIALOG": {
     "ADD": "Add",
