--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -92,7 +92,8 @@
     "WHATS_NEW": "Что нового",
     "FEEDBACK": "Обратная связь",
     "CAR": "Автомобиль",
-    "CATEGORY": "Категория"
+    "CATEGORY": "Категория",
+    "UPDATE": "Доступно обновление"
   },
   "DIALOG": {
     "ADD": "Добавление",
