--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -77,7 +77,7 @@
           "ENGINE": "Двигатель"
         },
         "TOOLTIPS": {
-          "OVERALL_EXPENSE": "Затраты за все время обслуживания.\n Расчитывается из данных в таблицах.",
+          "OVERALL_EXPENSE": "Затраты за все время обслуживания.\n Рассчитывается из данных в таблицах.",
           "MILEAGE": "Пробег автомобиля.\n Значение будет автоматически вставлено в поле 'Пробег' при создании записи."
         }
       }
