feat(app): add color panel

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -33,7 +33,8 @@
         "MONO": "Mono",
         "CURRENCY": "Currency",
         "METRIC_SYSTEM": "Metric system",
-        "ANIMATION": "Animations"
+        "ANIMATION": "Animations",
+        "COLORS":"Colors"
       },
       "ICONS_PACK_NAMES": {
         "DEFAULT": "Default"
