--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -33,7 +33,8 @@
         "MONO": "Mono",
         "CURRENCY": "Moneta",
         "METRIC_SYSTEM": "Sistema metrico",
-        "ANIMATION": "Animazioni"
+        "ANIMATION": "Animazioni",
+        "COLORS":"Сolori"
       },
       "ICONS_PACK_NAMES": {
         "DEFAULT": "Default"
