feat(app): implement color select control

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,7 +34,7 @@
         "CURRENCY": "Currency",
         "METRIC_SYSTEM": "Metric system",
         "ANIMATION": "Animations",
-        "COLORS":"Colors"
+        "COLORS":"Color"
       },
       "ICONS_PACK_NAMES": {
         "DEFAULT": "Default"
