--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -34,7 +34,7 @@
           "CURRENCY": "Валюта",
           "METRIC_SYSTEM": "Расстояние",
           "ANIMATION": "Анимации",
-          "COLORS":"Цвета"
+          "COLORS":"Цвет"
         },
         "ICONS_PACK_NAMES": {
           "DEFAULT": "Стандартные"
