refactor(app): update translation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -92,8 +92,8 @@
     "SETTINGS":"Settings",
     "WHATS_NEW": "What's new",
     "FEEDBACK": "Feedback",
-    "CAR": "Car",
-    "CATEGORY": "Category",
+    "CAR": "New car",
+    "CATEGORY": "New сategory",
     "UPDATE": "Update available"
   },
   "DIALOG": {
