--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -92,8 +92,8 @@
     "SETTINGS":"Настройки",
     "WHATS_NEW": "Что нового",
     "FEEDBACK": "Обратная связь",
-    "CAR": "Автомобиль",
-    "CATEGORY": "Категория",
+    "CAR": " Новый автомобиль",
+    "CATEGORY": "Новая категория",
     "UPDATE": "Доступно обновление"
   },
   "DIALOG": {
