--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -91,8 +91,8 @@
     "SETTINGS":"Impostazioni",
     "WHATS_NEW": "Novità",
     "FEEDBACK": "Feedback",
-    "CAR": "Automobile",
-    "CATEGORY": "Categoria",
+    "CAR": "Nuova automobile",
+    "CATEGORY": "Nuova categoria",
     "UPDATE": "Aggiornamento disponibile"
   },
   "DIALOG": {
