--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -49,11 +49,9 @@
         "TEXT": "Выберите Категорию"
       },
       "PDF_EXPORT": {
-        "CONFIGURATIONS": "Настройки",
         "PATH": "Путь для сохранения",
         "ORDER_AND_VISIBILITY": "Порядок и отображение",
-        "PREVIEW": "Предпросмотр",
-        "OTHER": "Другие",
+        "TITLE": "Экспорт в PDF",
         "SHOW_TOTAL_SUM": "Показать затраты для таблиц",
         "TOTAL": "Итог"
       },
