--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -2,6 +2,10 @@
   "PAGES": {
     "WELCOME": {
       "SUBTITLE": "Создавай. Организовывай. Планируй.",
+      "NEED_HELP": "Нужна помощь?",
+      "GITHUB": "Посмотрите на GitHub",
+      "MAIL": "Напишите письмо",
+      "QUESTION": "Задайте вопрос",
       "BUTTONS": {
         "GET_STARTED": "Начать"
       }
@@ -9,7 +13,7 @@
     "DATABASE_SELECT": {
       "TEXT": "Создайте или выберите существующую базу данных",
       "CREATE": "Создать",
-      "OPEN": "Выбрать"
+      "OPEN": "Открыть"
   },
       "DETAIL": {
         "EMPTY": "Записи отсутствуют",
