--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -122,6 +122,7 @@
     "BUTTONS": {
       "ADD": "Добавить",
       "EDIT": "Сохранить",
+      "SEND": "Отправить",
       "DELETE": "Удалить",
       "CANCEL": "Отмена",
       "CHANGE": "Изменить",
@@ -147,6 +148,8 @@
     "VALIDATIONS": {
       "NAME": "Введите Имя.",
       "DATE": "Введите корректную дату.",
+      "EMAIL": "Введите корректный Email.",
+      "TEXT": "Введите текст.",
       "EXPENSE": {
         "REQIRED": "Введите расход."
       },
