--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -46,11 +46,11 @@
         "BUTTONS": {
           "CHANGE": "Изменить",
           "CARS": "Автомобили",
-          "CATEGORIES": "Категории"
+          "CATEGORIES": "Группы"
         }
       },
       "EMPTY": {
-        "TEXT": "Выберите Категорию"
+        "TEXT": "Выберите группу"
       },
       "PDF_EXPORT": {
         "PATH": "Путь для сохранения",
@@ -61,7 +61,7 @@
       },
       "NAVIGATION": {
         "TABS": {
-          "CATEGORIES": "Категории",
+          "CATEGORIES": "Группы",
           "CARS": "Автомобили"
         }
       },
@@ -95,7 +95,7 @@
     "WHATS_NEW": "Что нового",
     "FEEDBACK": "Обратная связь",
     "CAR": " Новый автомобиль",
-    "CATEGORY": "Новая категория",
+    "CATEGORY": "Новая группа",
     "UPDATE": "Доступно обновление"
   },
   "DIALOG": {
@@ -110,10 +110,10 @@
     },
     "DELETE": {
       "TITLE": "Подтверждение удаления",
-      "CATEGORY": "Вы уверены, что хотите безвозвратно удалить категорию?",
+      "CATEGORY": "Вы уверены, что хотите безвозвратно удалить группу?",
       "RECORD": "Вы уверены, что хотите безвозвратно удалить запись?"
     },
-    "CATEGORY": "Категории",
+    "CATEGORY": "Группы",
     "CAR": "Автомобиля",
     "COMMON": "Общие",
     "INFO": "Информация",
@@ -131,7 +131,7 @@
     },
     "FIELDS": {
       "NAME": "Имя",
-      "CATEGORY": "Категория",
+      "CATEGORY": "Группы",
       "ILLUSTRATION": "Иллюстрация",
       "MILEAGE": "Пробег",
       "DATE": "Дата",
