--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -132,7 +132,7 @@
     "FIELDS": {
       "NAME": "Имя",
       "CATEGORY": "Группы",
-      "ILLUSTRATION": "Иллюстрация",
+      "ILLUSTRATION": "Иконка",
       "MILEAGE": "Пробег",
       "DATE": "Дата",
       "YEAR": "Год выпуска",
@@ -155,6 +155,10 @@
       },
       "NUMBER": "Введите числовое значение.",
       "POSITIVE": "Введите неотрицательное значение."
+    },
+    "ICON_GROUPS": {
+      "CAR_PARTS": "Части автомобиля",
+      "OTHERS": "Другие"
     },
     "TOOLTIPS": {
       "CAR_PARTS": "Запчасти, которые вы будете обслуживать"
