feat(feedback): add translation

--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -113,7 +113,7 @@
       "TITLE": "Обратная связь",
       "QUESTION_TITLE": "Задать вопрос",
       "OPTIONS": {
-        "BUG": "Баг",
+        "BUG": "Ошибка",
         "FEATURE": "Новый функционал"
       }
     },
