--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,6 +15,20 @@
         "CREATE": "Create",
         "OPEN": "Open"
     },
+    "DASHBOARD": {
+      "FEEDBACK": {
+        "TITLE": "Feedback",
+        "DESCRIPTION": "Request a feature, report a bug"
+      },
+      "SOURCE_CODE": {
+        "TITLE": "Source code",
+        "DESCRIPTION": "Clone, edit and even more"
+      },
+      "CHANGELOG": {
+        "TITLE": "",
+        "DESCRIPTION": "See what's new"
+      }
+    },
     "DETAIL": {
       "EMPTY": "No Records",
       "LAST_MODIFIED": "Last modified",
@@ -212,8 +226,9 @@
   "NAVIGATIONS": {
     "DASHBOARD": "Dashboard",
     "RECORDS": "Records",
-    "TASKS": "Tasks",
+    "EVENTS": "Events",
     "STORAGE": "Storage",
     "STATISTIC": "Charts"
-  }
+  },
+  "UNDER_DEV": "Under development"
 }
