--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -81,6 +81,7 @@
         }
       },
       "CATEGORY_DETAILS": {
+        "GROUPS": "Группы",
         "WIDGETS": {
           "INFO": "Информация",
           "NOTE": "Заметка",
