--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -214,7 +214,11 @@
     "EURO": "Euro",
     "DOLLAR": "Dollar",
     "RUSSIAN_RUBLE": "Russian ruble",
-    "BELARUSSIAN_RUBLE": "Belarussian ruble"
+    "BELARUSSIAN_RUBLE": "Belarussian ruble",
+    "POUND": "Pound sterling",
+    "YEN": "Yen / Yuán",
+    "RUPEE": "Rupee",
+    "LIRA": "Lira"
   },
   "METRIC_SYSTEM": {
     "KILOMETERS": "Kilometers",
