--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -132,6 +132,10 @@
         "FEATURE": "Новый функционал"
       }
     },
+    "CURRENCY": {
+      "TITLE": "Обновление настроек валюты",
+      "DESCRIPTION": "Пожалуйста, обновите выбранную валюту"
+    },
     "DELETE": {
       "TITLE": "Подтверждение удаления",
       "CATEGORY": "Вы уверены, что хотите безвозвратно удалить группу?",
