--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -132,6 +132,10 @@
         "FEATURE": "Новый функционал"
       }
     },
+    "CURRENCY": {
+      "TITLE": "Обновление настроек валюты",
+      "DESCRIPTION": "Пожалуйста, обновите выбранную валюту"
+    },
     "DELETE": {
       "TITLE": "Подтверждение удаления",
       "CATEGORY": "Вы уверены, что хотите безвозвратно удалить группу?",
@@ -214,8 +218,12 @@
   "CURRENCY": {
     "EURO": "Евро",
     "DOLLAR": "Доллар",
-    "RUSSIAN_RUBLE": "Русский рубль",
-    "BELARUSSIAN_RUBLE": "Белорусский рубль"
+    "RUSSIAN_RUBLE": "Российский рубль",
+    "BELARUSSIAN_RUBLE": "Белорусский рубль",
+    "POUND": "Британский фунт",
+    "YEN": "Йена / Юань",
+    "RUPEE": "Рупия",
+    "LIRA": "Лира"
   },
   "METRIC_SYSTEM": {
     "KILOMETERS": "Километры",
