--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -131,6 +131,10 @@
         "FEATURE": "Feature"
       }
     },
+    "CURRENCY": {
+      "TITLE": "Update your currency setting",
+      "DESCRIPTION": "Please, update your currency"
+    },
     "DELETE": {
       "TITLE": "Confirm Delete",
       "CATEGORY": "Do you really want to delete this group? This process cannot be undone.",
@@ -214,7 +218,11 @@
     "EURO": "Euro",
     "DOLLAR": "Dollar",
     "RUSSIAN_RUBLE": "Russian ruble",
-    "BELARUSSIAN_RUBLE": "Belarussian ruble"
+    "BELARUSSIAN_RUBLE": "Belarussian ruble",
+    "POUND": "Pound sterling",
+    "YEN": "Yen / Yuán",
+    "RUPEE": "Rupee",
+    "LIRA": "Lira"
   },
   "METRIC_SYSTEM": {
     "KILOMETERS": "Kilometers",
