--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -53,7 +53,8 @@
           "CURRENCY": "Валюта",
           "METRIC_SYSTEM": "Расстояние",
           "ANIMATION": "Анимации",
-          "COLORS":"Цвет"
+          "COLORS":"Цвет",
+          "APPEARANCE":"Тема"
         },
         "ICONS_PACK_NAMES": {
           "DEFAULT": "Стандартные"
@@ -240,5 +241,10 @@
     "STORAGE": "Склад",
     "STATISTIC": "Статистика"
   },
-  "UNDER_DEV": "В разработке"
+  "UNDER_DEV": "В разработке",
+  "SCHEMAS": {
+    "LIGHT": "Светлая",
+    "DARK": "Темная",
+    "AUTO": "Авто"
+  }
 }
