chore(dashboard): update translation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,6 +27,10 @@
       "CHANGELOG": {
         "TITLE": "",
         "DESCRIPTION": "See what's new"
+      },
+      "DOCUMENTATION": {
+        "TITLE": "Documentation",
+        "DESCRIPTION": "How to use?"
       }
     },
     "DETAIL": {
