--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -27,6 +27,10 @@
     "CHANGELOG": {
       "TITLE": "",
       "DESCRIPTION": "Что нового?"
+    },
+    "DOCUMENTATION": {
+      "TITLE": "Документация",
+      "DESCRIPTION": "Как использовать?"
     }
   },
       "DETAIL": {
