--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,6 +27,10 @@
       "CHANGELOG": {
         "TITLE": "",
         "DESCRIPTION": "See what's new"
+      },
+      "DOCUMENTATION": {
+        "TITLE": "Documentation",
+        "DESCRIPTION": "How to use?"
       }
     },
     "DETAIL": {
@@ -53,7 +57,8 @@
         "CURRENCY": "Currency",
         "METRIC_SYSTEM": "Metric system",
         "ANIMATION": "Animations",
-        "COLORS":"Color"
+        "COLORS":"Accent color",
+        "APPEARANCE":"Appearance"
       },
       "ICONS_PACK_NAMES": {
         "DEFAULT": "Default"
@@ -239,5 +244,10 @@
     "STORAGE": "Storage",
     "STATISTIC": "Charts"
   },
-  "UNDER_DEV": "Under development"
+  "UNDER_DEV": "Under development",
+  "SCHEMAS": {
+    "LIGHT": "Light",
+    "DARK": "Dark",
+    "AUTO": "Auto"
+  }
 }
