--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -110,6 +110,7 @@
     "ADD": "Добавить",
     "EDIT": "Редактировать",
     "DELETE": "Удалить",
+    "MOVE": "Переместить",
     "ABOUT": "О приложении",
     "GITHUB": "GitHub",
     "SETTINGS":"Настройки",
@@ -122,12 +123,14 @@
   "DIALOG": {
     "ADD": "Добавление",
     "EDIT": "Редактирование",
-    "FEEDBACK": "Обратная связь",
     "RELEASE_NOTES": {
       "TITLE": "Версия",
       "NEW_FEATURES": "Добавленный функционал",
       "BUGFIXES": "Исправленные ошибки",
       "IMPROVEMENTS": "Улучшения"
+    },
+    "MOVE": {
+      "TITLE": "Переместить"
     },
     "FEEDBACK": {
       "TITLE": "Обратная связь",
@@ -160,7 +163,8 @@
       "CANCEL": "Отмена",
       "CHANGE": "Изменить",
       "EXPORT": "Экспорт",
-      "SUBMIT": "Отправить"
+      "SUBMIT": "Отправить",
+      "MOVE": "Переместить"
     },
     "FIELDS": {
       "NAME": "Имя",
@@ -214,7 +218,8 @@
     "MILEAGE": "Пробег",
     "DATE": "Дата",
     "EXPENSE": "Расход",
-    "COMMENT": "Заметка"
+    "COMMENT": "Заметка",
+    "CONSUMABLES": "Расходники"
   },
   "FEEDBACK_TYPES": {
     "BUG": "Ошибка",
@@ -250,5 +255,13 @@
     "LIGHT": "Светлая",
     "DARK": "Темная",
     "AUTO": "Авто"
+  },
+  "COLUMNS": "Колонки",
+  "SEARCH": "Искать",
+  "NOTIFICATIONS": {
+    "EXPORT": {
+      "TEXT": "Экспорт завершён",
+      "ACTION": "Открыть"
+    }
   }
 }
