--- a/src/assets/i18n/kz.json
+++ b/src/assets/i18n/kz.json
@@ -118,7 +118,11 @@
     "FEEDBACK": "Кері байланыс",
     "CAR": " Жаңа автомобиль",
     "CATEGORY": "Жаңа топ",
-    "UPDATE": "Жаңарту қолжетімді"
+    "UPDATE": "Жаңарту қолжетімді",
+    "TITLE" : {
+      "EXPORT": "Экспорттау",
+      "COLUMNS": "Бағандар"
+    }
   },
   "DIALOG": {
     "ADD": "Қосу",
@@ -256,7 +260,6 @@
     "DARK": "Қараңғы",
     "AUTO": "Авто"
   },
-  "COLUMNS": "Бағандар",
   "SEARCH": "Іздеу",
   "NOTIFICATIONS": {
     "EXPORT": {
