--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -118,7 +118,11 @@
     "FEEDBACK": "Обратная связь",
     "CAR": " Новый автомобиль",
     "CATEGORY": "Новая группа",
-    "UPDATE": "Доступно обновление"
+    "UPDATE": "Доступно обновление",
+    "TITLE" : {
+      "EXPORT": "Экспорт",
+      "COLUMNS": "Колонки"
+    }
   },
   "DIALOG": {
     "ADD": "Добавление",
@@ -256,7 +260,6 @@
     "DARK": "Темная",
     "AUTO": "Авто"
   },
-  "COLUMNS": "Колонки",
   "SEARCH": "Искать",
   "NOTIFICATIONS": {
     "EXPORT": {
