--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -134,7 +134,9 @@
       "IMPROVEMENTS": "Улучшения"
     },
     "MOVE": {
-      "TITLE": "Переместить"
+      "TITLE": "Переместить",
+      "SEARCH": "Поиск",
+      "NO_SEARCH_RESULT": "Пусто"
     },
     "FEEDBACK": {
       "TITLE": "Обратная связь",
@@ -146,7 +148,8 @@
     },
     "CURRENCY": {
       "TITLE": "Обновление настроек валюты",
-      "DESCRIPTION": "Пожалуйста, обновите выбранную валюту"
+      "DESCRIPTION": "Пожалуйста, обновите выбранную валюту",
+      "TENGE": "Тенге"
     },
     "DELETE": {
       "TITLE": "Подтверждение удаления",
