fix(translation): Added missed translation for tenge

--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -149,7 +149,6 @@
     "CURRENCY": {
       "TITLE": "Обновление настроек валюты",
       "DESCRIPTION": "Пожалуйста, обновите выбранную валюту",
-      "TENGE": "Тенге"
     },
     "DELETE": {
       "TITLE": "Подтверждение удаления",
@@ -240,7 +239,8 @@
     "POUND": "Британский фунт",
     "YEN": "Йена / Юань",
     "RUPEE": "Рупия",
-    "LIRA": "Лира"
+    "LIRA": "Лира",
+    "TENGE": "Тенге"
   },
   "METRIC_SYSTEM": {
     "KILOMETERS": "Километры",
