fix(translation): Fixed error

--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -148,7 +148,7 @@
     },
     "CURRENCY": {
       "TITLE": "Обновление настроек валюты",
-      "DESCRIPTION": "Пожалуйста, обновите выбранную валюту",
+      "DESCRIPTION": "Пожалуйста, обновите выбранную валюту"
     },
     "DELETE": {
       "TITLE": "Подтверждение удаления",
