--- a/src/assets/i18n/kz.json
+++ b/src/assets/i18n/kz.json
@@ -152,8 +152,11 @@
     },
     "DELETE": {
       "TITLE": "Жоюды растау",
-      "CATEGORY": "Топты қайтарымсыз жойғыңыз келетініне сенімдісіз бе?",
-      "RECORD": "Жазбаны қайтарымсыз жойғыңыз келетініне сенімдісіз бе?"
+      "TEXT": "<b class=\"primary-text-color\">{{name}}</b> қайтарымсыз жойғыңыз келетініне сенімдісіз бе?",
+      "DECLESIONS": {
+        "RECORDS": ["Жазба", "Жазбаны"],
+        "GROUPS": "Топты"
+      }
     },
     "CATEGORY": "Топтар",
     "CAR": "Автомобильдер",
