--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -152,8 +152,11 @@
     },
     "DELETE": {
       "TITLE": "Подтверждение удаления",
-      "CATEGORY": "Вы уверены, что хотите безвозвратно удалить группу?",
-      "RECORD": "Вы уверены, что хотите безвозвратно удалить запись?"
+      "TEXT": "Вы уверены, что хотите удалить <b class=\"primary-text-color\">{{name}}</b>?",
+      "DECLESIONS": {
+        "RECORDS": ["запись", "записи", "записей"],
+        "GROUPS": "группу"
+      }
     },
     "CATEGORY": "Группы",
     "CAR": "Автомобиля",
