feat(#135): add shekel currency for Israel users

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -255,7 +255,8 @@
     "YEN": "Yen / Yuán",
     "RUPEE": "Rupee",
     "LIRA": "Lira",
-    "TENGE": "Tenge"
+    "TENGE": "Tenge",
+    "SHEKEL": "Shekel"
   },
   "METRIC_SYSTEM": {
     "KILOMETERS": "Kilometers",
