feat(#135): Added shekel icon

--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -255,7 +255,7 @@
     "RUPEE": "Рупия",
     "LIRA": "Лира",
     "TENGE": "Тенге",
-    "SHEKEL": "Новый Ше́кель"
+    "SHEKEL": "Новый шекель"
   },
   "METRIC_SYSTEM": {
     "KILOMETERS": "Километры",
