--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -254,7 +254,8 @@
     "YEN": "Йена / Юань",
     "RUPEE": "Рупия",
     "LIRA": "Лира",
-    "TENGE": "Тенге"
+    "TENGE": "Тенге",
+    "SHEKEL": "Новый шекель"
   },
   "METRIC_SYSTEM": {
     "KILOMETERS": "Километры",
